--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!-- THIS WEBSITE IS MADE BY A MORROCAN developer, FOR SUPPORT U CAN TEXT: khmouyassir884@gmail.com -->
-<!DOCTYPE html>
+<!-- THIS WEBSITE IS MADE BY A MORROCAN developer, FOR SUPPORT U CAN TEXT: khmouyassir884@gmail.com , or my partner: ig: _its_eyyaaaa -->
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
