--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- THIS WEBSITE IS MADE BY A MORROCAN developer, FOR SUPPORT U CAN TEXT: khmouyassir884@gmail.com , or my partner: ig: _its_eyyaaaa -->
+<!-- THIS WEBSITE IS MADE BY A MORROCAN developer, FOR SUPPORT U CAN TEXT: khmouyassir884@gmail.com / my partner's instagram : _its_eyyaaaa -->
 <!DOCTYPE html> 
 <html lang="en">
 <head>
@@ -49,6 +49,48 @@
 
                     <div class="black">
 
+                        <h1>Oppenheimer</h1>
+                        <div class="star">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <p>
+                            During World War II, Lt. Gen. Leslie Groves Jr. appoints physicist J.
+							Robert Oppenheimer to work on the top-secret Manhattan Project. 
+							Oppenheimer and a team of scientists spend years developing and designing the atomic bomb.
+							Their work comes to fruition on July 16, 1945, as they witness the world's first nuclear explosion,
+							forever changing the course of history.
+                        </p>
+                        <div class="genre">
+
+                            <a href="#" class="category">Action</a>
+                            <a href="#" class="category">Drama</a>
+                            <a href="#" class="category"><span>4K</span></a>
+
+                        </div>
+                        <div class="watch">
+                            <i class="fa-solid fa-play" onclick="_yk()"="playTrailer()"></i>
+
+                            <p>watch</p>
+                        </div>
+
+                    </div>
+
+                    <img src="image/background_6.jpg">
+
+                </div>
+
+              </div>
+			  
+			  <div class="swiper-slide">
+
+                <div class="image">
+
+                    <div class="black">
+
                         <h1>Death on the Nile</h1>
                         <div class="star">
                             <i class="fa-solid fa-star"></i>
@@ -82,8 +124,8 @@
                 </div>
 
               </div>
-
-              <div class="swiper-slide">
+			  
+			  <div class="swiper-slide">
 
                 <div class="image">
 
