--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!-- THIS WEBSITE IS MADE BY A MORROCAN developer, FOR SUPPORT U CAN TEXT: khmouyassir884@gmail.com / my partner's instagram : _its_eyyaaaa -->
-<!DOCTYPE html> 
+<!-- THIS WEBSITE IS MADE BY A MORROCAN developer, FOR SUPPORT U CAN TEXT: khmouyassir884@gmail.com /or text my partner: ayaelaoufi5@gmail.com -->
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -43,6 +43,46 @@
 
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
+			 <div class="swiper-slide">
+
+                <div class="image">
+
+                    <div class="black">
+
+                        <h1>Gran Turismo</h1>
+                        <div class="star">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <p>
+                            The true story of a team of unlikely underdogs -- a working-class gamer,
+							a former race-car driver, and an idealistic motorsport executive --
+							who risk it all to take on the most elite sport in the world.
+                        </p>
+                        <div class="genre">
+
+                            <a href="#" class="category">Action</a>
+                            <a href="#" class="category">Drama</a>
+                            <a href="#" class="category"><span>4K</span></a>
+
+                        </div>
+                        <div class="watch">
+                            <i class="fa-solid fa-play" onclick="_yk()"="playTrailer()"></i>
+
+                            <p>watch</p>
+                        </div>
+
+                    </div>
+
+                    <img src="image/background_7.jpg">
+
+                </div>
+
+              </div>
+			  
               <div class="swiper-slide">
 
                 <div class="image">
